# mcp_collection

./: CODE_REVIEW.md  ISSUES_SUMMARY.md  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
bullet_tree_mcp/: README.md  pyproject.toml  usage.md
bullet_tree_mcp/src/bullet_tree/: __init__.py  server.py
bullet_tree_mcp/tests/: test_basic.py
chess_api_mcp/: README.md  pyproject.toml  usage.md
chess_api_mcp/src/chess_api_mcp/: __init__.py  server.py
chess_api_mcp/tests/: test_basic.py
codeblock_tools_mcp/: README.md  pyproject.toml  usage.md
codeblock_tools_mcp/src/codeblock_tools/: __init__.py  server.py
codeblock_tools_mcp/tests/: test_basic.py
conversations/: pyproject.toml  usage.md
conversations/tests/: test_server.py
countries_currencies_mcp/: README.md  pyproject.toml  usage.md
countries_currencies_mcp/tests/: test_basic.py
csv_inspector_mcp/: README.md  pyproject.toml  usage.md
csv_inspector_mcp/src/csv_inspector/: __init__.py  server.py
csv_inspector_mcp/tests/: test_basic.py
current_date_time/: pyproject.toml  usage.md
current_date_time/tests/: test_basic.py
diff_tools_mcp/: README.md  pyproject.toml  usage.md
diff_tools_mcp/src/diff_tools_mcp/: __init__.py  server.py
diff_tools_mcp/tests/: test_basic.py
dotenv_mcp/: README.md  pyproject.toml  usage.md
dotenv_mcp/src/dotenv_mcp/: __init__.py  server.py
dotenv_mcp/tests/: test_basic.py
file_inspector_mcp/: README.md  pyproject.toml  usage.md
file_inspector_mcp/src/file_inspector/: server.py
file_inspector_mcp/tests/: test_basic.py
ini_tools_mcp/: README.md  pyproject.toml  usage.md
ini_tools_mcp/src/ini_tools_mcp/: __init__.py  server.py
ini_tools_mcp/tests/: test_basic.py
logfmt_tools_mcp/: README.md  pyproject.toml  usage.md
logfmt_tools_mcp/src/logfmt_tools/: __init__.py  server.py
logfmt_tools_mcp/tests/: test_basic.py
markdown_to_pdf/: usage.md
math_and_logic/: pyproject.toml  usage.md
math_and_logic/tests/: test_basic.py
news_mcp/: pyproject.toml  usage.md
news_mcp/tests/: test_basic.py
outline_parser_mcp/: README.md  pyproject.toml  usage.md
outline_parser_mcp/src/outline_parser/: __init__.py  server.py
outline_parser_mcp/tests/: test_basic.py
python_ast_mcp/: README.md  pyproject.toml  usage.md
python_ast_mcp/src/python_ast/: __init__.py  server.py
python_ast_mcp/tests/: test_basic.py
regex_tools_mcp/: README.md  pyproject.toml  usage.md
regex_tools_mcp/src/regex_tools_mcp/: __init__.py  server.py
regex_tools_mcp/tests/: test_basic.py
scripts/: list_servers.py  new_server.py  validate_ci.sh  validate_collection.py
sqlite_read_server/: pyproject.toml  usage.md
sqlite_read_server/tests/: test_basic.py
text_fingerprint_mcp/: README.md  pyproject.toml  usage.md
text_fingerprint_mcp/src/text_fingerprint/: __init__.py  server.py
text_fingerprint_mcp/tests/: test_basic.py
text_utils_mcp/: README.md  pyproject.toml  usage.md
text_utils_mcp/src/text_utils/: server.py
text_utils_mcp/tests/: test_basic.py
uuid_tools_mcp/: README.md  pyproject.toml  usage.md
uuid_tools_mcp/src/uuid_tools/: server.py
uuid_tools_mcp/tests/: test_basic.py
weather_geocoding/: README.md  pyproject.toml  usage.md
weather_geocoding/tests/: test_basic.py
wikipedia_mcp/: pyproject.toml  usage.md
wikipedia_mcp/tests/: test_basic.py
yfin/: pyproject.toml  usage.md
yfin/tests/: test_basic.py
