[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bullet-tree-mcp"
version = "0.1.0"
description = "MCP server for parsing/rendering indented bullet lists as a simple tree structure."
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.scripts]
bullet-tree-mcp = "bullet_tree.server:main"
