[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeblock-tools-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
codeblock-tools-mcp = "codeblock_tools.server:main"
