[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-inspector-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
csv-inspector-mcp = "csv_inspector.server:main"
