[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotenv-mcp"
version = "0.1.0"
description = "MCP server providing .env (dotenv) parsing/rendering/diff tools"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.scripts]
dotenv-mcp = "dotenv_mcp.server:main"
